--- a/reports/templates/reports_group.html
+++ b/reports/templates/reports_group.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 
-{% block title %}资源统计列表{% endblock %}
+{% block title %}{% translate '资源统计列表' %}{% endblock %}
 
 {% block head %}
         <link rel="stylesheet" type="text/css" href="{% static 'reports/reports.css' %}">
@@ -12,7 +13,7 @@
         <div class="d-flex px-3">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">全部</a></li>
+                <li class="breadcrumb-item"><a href="#">{% translate '全部' %}</a></li>
                 <li class="breadcrumb-item"><a href="#" id="center-id-current"></a></li>
                 <li class="breadcrumb-item active" aria-current="page" id="id-current" data-id="{{ group_id }}"></li>
               </ol>
@@ -23,10 +24,10 @@
             <div style="width: 200px">
                 <ul class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
                   <li class="nav-item">
-                    <a class="nav-link active" data-toggle="tab" href="#host" aria-controls="host" aria-selected="false">宿主机</a>
+                    <a class="nav-link active" data-toggle="tab" href="#host" aria-controls="host" aria-selected="false">{% translate '宿主机' %}</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#graph" aria-controls="graph" aria-selected="false">可视化图表</a>
+                    <a class="nav-link" data-toggle="tab" href="#graph" aria-controls="graph" aria-selected="false">{% translate '可视化图表' %}</a>
                   </li>
                 </ul>
             </div>
@@ -36,13 +37,13 @@
                         <table class="table" id="id-table-group">
                             <thead class="thead-light">
                             <tr>
-                                <th>总cpu(/核)</th>
-                                <th>已分配cpu(/核)</th>
-                                <th>cpu分配率</th>
-                                <th>总内存</th>
-                                <th>已使用内存</th>
-                                <th>内存使用率</th>
-                                <th>虚拟机数</th>
+                                <th>{% translate '总cpu(/核)' %}</th>
+                                <th>{% translate '已分配(/核)' %}</th>
+                                <th>cpu{% translate '分配率' %}</th>
+                                <th>{% translate '总内存' %}</th>
+                                <th>{% translate '已使用内存' %}</th>
+                                <th>{% translate '内存使用率' %}</th>
+                                <th>{% translate '虚拟机数' %}</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
@@ -53,14 +54,14 @@
                             <thead class="thead-light">
                             <tr>
                                 <th>IP地址</th>
-                                <th>宿主机组</th>
-                                <th>总cpu(/核)</th>
-                                <th>已分配cpu(/核)</th>
-                                <th>cpu分配率</th>
-                                <th>总内存</th>
-                                <th>已使用内存</th>
-                                <th>内存使用率</th>
-                                <th>虚拟机数</th>
+                                <th>{% translate '宿主机组' %}</th>
+                                <th>{% translate '总cpu(/核)' %}</th>
+                                <th>{% translate '已分配(/核)' %}</th>
+                                <th>cpu{% translate '分配率' %}</th>
+                                <th>{% translate '总内存' %}</th>
+                                <th>{% translate '已使用内存' %}</th>
+                                <th>{% translate '内存使用率' %}</th>
+                                <th>{% translate '虚拟机数' %}</th>
                             </tr>
                             </thead>
                             <tbody></tbody>
