--- a/vms/templates/vm_mount_disk.html
+++ b/vms/templates/vm_mount_disk.html
@@ -1,46 +1,47 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% load  sizeformat %}
 
-{% block title %}挂载云硬盘{% endblock %}
+{% block title %}{% translate '挂载云硬盘' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>挂载云硬盘</strong></span>
+                <span class="card-title"><strong>{% translate '挂载云硬盘' %}</strong></span>
                 <div class="float-right">
-                    <a class="btn btn-sm btn-success" href="{% url 'vdisk:vdisk-create' %}">创建云硬盘</a>
-                    <a class="btn btn-sm btn-info" href="{% url 'vdisk:vdisk-list' %}">云硬盘列表</a>
+                    <a class="btn btn-sm btn-success" href="{% url 'vdisk:vdisk-create' %}">{% translate '创建云硬盘' %}</a>
+                    <a class="btn btn-sm btn-info" href="{% url 'vdisk:vdisk-list' %}">{% translate '云硬盘列表' %}</a>
                 </div>
             </div>
             <div class="card-body">
                 <div class="">
-                    <div class="text-primary h4">虚拟机信息:</div>
+                    <div class="text-primary h4">{% translate '虚拟机信息' %}:</div>
                     <div class="">
                         <dl class="row">
-                            <dt class="col-2 text-right">虚拟机UUID:</dt> <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                            <dt class="col-2 text-right">虚拟机IP地址:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
-                            <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
-                            <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
-                            <dt class="col-2 text-right">备注:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
+                            <dt class="col-2 text-right">{% translate '虚拟机UUID' %}:</dt> <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
+                            <dt class="col-2 text-right">{% translate '虚拟机IP地址' %}:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
+                            <dt class="col-2 text-right">{% translate '镜像' %}:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
+                            <dt class="col-2 text-right">{% translate '机组' %}:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
+                            <dt class="col-2 text-right">{% translate '备注' %}:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
                         </dl>
                     </div>
                 </div>
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 <div>
                     <div class="row">
-                        <div class="text-success h4 col-sm-4">可供挂载的云硬盘：</div>
+                        <div class="text-success h4 col-sm-4">{% translate '可供挂载的云硬盘' %}：</div>
                         <div class="float-right col-sm-8">
                             <form role="form" class="form-horizontal" method="get" action="">
                                 <div class="input-group" style="">
                                     <div class="input-group-prepend">
-                                        <label class="input-group-text" for="id-center">关键字</label>
+                                        <label class="input-group-text" for="id-center">{% translate '关键字' %}</label>
                                     </div>
                                     <input type="text" class="form-control" name="search" value="{{ search }}"
-                                           id="id-center" placeholder="搜 UUID、备注"/>
+                                           id="id-center" placeholder="{% translate '搜 UUID、备注' %}"/>
                                     <div class="input-group-append">
-                                        <button type="submit" class="btn btn-primary form-control">筛选</button>
+                                        <button type="submit" class="btn btn-primary form-control">{% translate '筛选' %}</button>
                                     </div>
                                 </div>
                             </form>
@@ -52,14 +53,14 @@
                 <thead class="table-light">
                 <tr>
                     <th>UUID</th>
-                    <th>机组</th>
-                    <th>存储池</th>
-                    <th>容量</th>
-                    <th>用户</th>
-                    <th>创建时间</th>
-                    <th>状态</th>
-                    <th>备注</th>
-                    <th>操作</th>
+                    <th>{% translate '机组' %}</th>
+                    <th>{% translate '存储池' %}</th>
+                    <th>{% translate '容量' %}</th>
+                    <th>{% translate '用户' %}</th>
+                    <th>{% translate '创建时间' %}</th>
+                    <th>{% translate '状态' %}</th>
+                    <th>{% translate '备注' %}</th>
+                    <th>{% translate '操作' %}</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -82,7 +83,7 @@
                             <span>{{ disk.remarks|default_if_none:'' }}</span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-xs btn-success btn-disk-mount" data-disk-uuid="{{ disk.uuid }}">挂载</button>
+                            <button type="button" class="btn btn-xs btn-success btn-disk-mount" data-disk-uuid="{{ disk.uuid }}">{% translate '挂载' %}</button>
                         </td>
                     </tr>
                 {% endfor %}
