--- a/image/templates/image_list.html
+++ b/image/templates/image_list.html
@@ -1,21 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 {% load  sizeformat %}
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'image/image_list.css' %}">
 {% endblock %}
-{% block title %}镜像列表{% endblock %}
+{% block title %}{% translate '镜像列表' %}{% endblock %}
 
 {% block boby %}
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>镜像列表 ({{ count }})</strong></span>
+                <span class="card-title"><strong>{% translate '镜像列表' %} ({{ count }})</strong></span>
                 {% if user.is_superuser %}
                     <span>
                         <a class="btn btn-sm btn-primary float-right" href="{% url 'admin:image_image_add' %}"
-                           target="_blank">新增镜像</a>
+                           target="_blank">{% translate '新增镜像' %}</a>
                     </span>
                 {% endif %}
             </div>
@@ -23,7 +24,7 @@
                 <form role="form" class="form-horizontal" method="get" action="">
                     <div class="input-group" style="">
                         <div class="input-group-prepend">
-                            <label class="input-group-text" for="id-center">数据中心</label>
+                            <label class="input-group-text" for="id-center">{% translate '数据中心' %}</label>
                         </div>
                         <select name="center" class="custom-select" id="id-center">
                             <option value="">--</option>
@@ -34,7 +35,7 @@
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
-                            <label class="input-group-text" for="id-tag">标签</label>
+                            <label class="input-group-text" for="id-tag">{% translate '标签' %}</label>
                         </div>
                         <select name="tag" class="custom-select" id="id-tag">
                             <option value="">--</option>
@@ -44,7 +45,7 @@
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
-                            <label class="input-group-text" for="id-sys-type">系统类型</label>
+                            <label class="input-group-text" for="id-sys-type">{% translate '系统类型' %}</label>
                         </div>
                         <select name="sys_type" class="custom-select" id="id-sys-type">
                             <option value="">--</option>
@@ -54,11 +55,11 @@
                             {% endfor %}
                         </select>
                         <div class="input-group-prepend">
-                            <label class="input-group-text">关键字</label>
+                            <label class="input-group-text">{% translate '关键字' %}</label>
                         </div>
                         <input type="text" class="form-control" name="search" value="{{ search }}"
-                               placeholder="搜 名称、备注"/>
-                        <button type="submit" class="btn btn-primary form-control">筛选</button>
+                               placeholder="{% translate '搜 名称、备注' %}"/>
+                        <button type="submit" class="btn btn-primary form-control">{% translate '筛选' %}</button>
                     </div>
                 </form>
             </div>
@@ -66,22 +67,22 @@
                 <thead class="thead-light">
                 <tr>
                     <th style="width: 50px"></th>
-                    <th style="width: 280px">名称</th>
-                    <th style="width: 60px">启用</th>
-                    <th style="width: 90px">系统类型</th>
-                    <th style="width: 100px">镜像标签</th>
-                    <th style="width: 180px">虚拟机模板</th>
-                    <th style="width: 220px">生效快照</th>
+                    <th style="width: 280px">{% translate '名称' %}</th>
+                    <th style="width: 60px">{% translate '启用' %}</th>
+                    <th style="width: 90px">{% translate '系统类型' %}</th>
+                    <th style="width: 100px">{% translate '镜像标签' %}</th>
+                    <th style="width: 180px">{% translate '虚拟机模板' %}</th>
+                    <th style="width: 220px">{% translate '生效快照' %}</th>
 
                     <th>备注</th>
                     {% if user.is_superuser %}
                         <th style="width: 150px">
-                            <span>虚拟机状态</span>
+                            <span>{% translate '虚拟机状态' %}</span>
                             <button class="btn btn-sm btn-outline-success btn-update-vm-status"><i
                                     class="fa fa-sync"></i>
                             </button>
                         </th>
-                        <th style="width: 200px">操作</th>
+                        <th style="width: 200px">{% translate '操作' %}</th>
                     {% endif %}
                 </tr>
                 </thead>
@@ -112,7 +113,7 @@
                                 </div>
                             </td>
                         {% else %}
-                            <td>是</td>
+                            <td>{% translate '是' %}</td>
                         {% endif %}
                         <td>{{ image.sys_type_display }}</td>
                         <td>{{ image.tag_display }}</td>
@@ -122,7 +123,7 @@
                                     class="badge-hidden">new</span> </span>
                             {% if user.is_superuser %}
                                 <button type="button" class="btn btn-sm btn-warning btn-image-update operation-button"
-                                        data-image-id="{{ image.id }}">更新
+                                        data-image-id="{{ image.id }}">{% translate '更新' %}
                                 </button>
                             {% endif %}
                         </td>
@@ -131,14 +132,14 @@
                                 <span>{{ image.desc|default_if_none:'' }}</span>
                                 {% if user.is_superuser %}
                                     <span class="mouse-hover-show edit_image_remark" data-image-id="{{ image.id }}"
-                                          title="修改备注">
+                                          title="{% translate '修改备注' %}">
                                         <span class="fa fa-edit"></span>
                                     </span>
                                 {% endif %}
                             </div>
                             <div id="remarks_edit" style="display:none;">
                                 <textarea id="remarks">{{ image.desc|default_if_none:'' }}</textarea>
-                                <span class="save_image_remark" title="保存备注" data-image-id="{{ image.id }}">
+                                <span class="save_image_remark" title="{% translate '保存备注' %}" data-image-id="{{ image.id }}">
                                     <span class="fa fa-save" aria-hidden="true"></span>
                                 </span>
                             </div>
@@ -159,28 +160,28 @@
                                         </button>
                                         <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuButton">
                                             <button class="dropdown-item bg-success btn-vm-start" type="button"
-                                                    data-image-id="{{ image.id }}">开机
+                                                    data-image-id="{{ image.id }}">{% translate '开机' %}
                                             </button>
                                             <button class="dropdown-item bg-warning btn-vm-shutdown" type="button"
-                                                    data-image-id="{{ image.id }}">软关机
+                                                    data-image-id="{{ image.id }}">{% translate '软关机' %}
                                             </button>
                                             <button class="dropdown-item bg-warning btn-vm-poweroff" type="button"
-                                                    data-image-id="{{ image.id }}">硬断电
+                                                    data-image-id="{{ image.id }}">{% translate '硬断电' %}
                                             </button>
                                             <button class="dropdown-item bg-danger btn-vm-delete" type="button"
-                                                    data-image-id="{{ image.id }}">强制删除VM
+                                                    data-image-id="{{ image.id }}">{% translate '强制删除VM' %}
                                             </button>
                                         </div>
                                         <a class="btn btn-sm btn-danger operation-button"
-                                           href="{% url 'image:image-delete' id=image.id %}">删除镜像</a>
+                                           href="{% url 'image:image-delete' id=image.id %}">{% translate '删除镜像' %}</a>
 
                                     </div>
                                 {% else %}
                                     <div class="btn-group">
                                         <a class="btn btn-sm btn-primary"
-                                           href="{% url 'image:image-vm-create' image_id=image.id %}">创建虚拟机</a>
+                                           href="{% url 'image:image-vm-create' image_id=image.id %}">{% translate '创建虚拟机' %}</a>
                                         <a class="btn btn-sm btn-danger operation-button"
-                                           href="{% url 'image:image-delete' id=image.id %}">删除镜像</a>
+                                           href="{% url 'image:image-delete' id=image.id %}">{% translate '删除镜像' %}</a>
                                     </div>
                                 {% endif %}
                             </td>
@@ -192,38 +193,38 @@
                             <div class="collapse" id="row_collapse_{{ image.id }}">
                                 <form>
                                     <div class="form-group row">
-                                        <label for="default_user" class="col-sm-1 col-form-label">默认用户名</label>
+                                        <label for="default_user" class="col-sm-1 col-form-label">{% translate '默认用户名' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="default_user">{{ image.default_user }}</span>
-                                        <label for="default_password" class="col-sm-1 col-form-label">默认密码</label>
+                                        <label for="default_password" class="col-sm-1 col-form-label">{% translate '默认密码' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="default_password">{{ image.default_password }}</span>
-                                        <label for="size" class="col-sm-1 col-form-label">镜像大小</label>
+                                        <label for="size" class="col-sm-1 col-form-label">{% translate '镜像大小' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="size">{{ image.size }} GB</span>
                                     </div>
                                     <div class="form-group row">
-                                        <label for="name" class="col-sm-1 col-form-label">创建时间</label>
+                                        <label for="name" class="col-sm-1 col-form-label">{% translate '创建时间' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="name">{{ image.create_time }}</span>
-                                        <label for="version" class="col-sm-1 col-form-label">更新时间</label>
+                                        <label for="version" class="col-sm-1 col-form-label">{% translate '更新时间' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="version">{{ image.update_time }}</span>
-                                        <label for="sys_type_display" class="col-sm-1 col-form-label">创建人</label>
+                                        <label for="sys_type_display" class="col-sm-1 col-form-label">{% translate '创建人' %}</label>
                                         <span class="col-sm-3 form-control-plaintext"
                                               id="sys_type_display">{{ image.user }}</span>
                                     </div>
                                     {% if user.is_superuser and  image.vm_uuid %}
                                         <div class="form-group row">
-                                            <label for="name" class="col-sm-1 col-form-label">虚拟机ID</label>
+                                            <label for="name" class="col-sm-1 col-form-label">{% translate '虚拟机ID' %}</label>
                                             <span class="col-sm-3 form-control-plaintext"
                                                   id="name">{{ image.vm_uuid }}</span>
-                                            <label for="version" class="col-sm-1 col-form-label">虚拟机内存</label>
+                                            <label for="version" class="col-sm-1 col-form-label">{% translate '虚拟机内存' %}</label>
                                             <span class="col-sm-3 form-control-plaintext"
                                                   id="version">{{ image.vm_mem }}GB</span>
-                                            <label for="sys_type_display" class="col-sm-1 col-form-label">虚拟机CPU</label>
+                                            <label for="sys_type_display" class="col-sm-1 col-form-label">{% translate '虚拟机CPU' %}</label>
                                             <span class="col-sm-3 form-control-plaintext"
-                                                  id="sys_type_display">{{ image.vm_vcpu }}核</span>
+                                                  id="sys_type_display">{{ image.vm_vcpu }}{% translate '核' %}</span>
                                         </div>
                                     {% endif %}
                                 </form>
