--- a/image/templates/image_vm_create.html
+++ b/image/templates/image_vm_create.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load i18n %}
 {% block head %}
 {% endblock %}
-{% block title %}创建镜像虚拟机{% endblock %}
+{% block title %}{% translate '创建镜像虚拟机' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>创建镜像({{ image.name }})管理虚拟机</strong></span>
+                <span class="card-title"><strong>{% translate '创建镜像' %}({{ image.name }}){% translate '管理虚拟机' %}</strong></span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'image:image-list' %}">
-                    镜像列表
+                    {% translate '镜像列表' %}
                 </a></span>
             </div>
             <div class="card-body align-content-center">
@@ -39,7 +39,7 @@
                     <p id="tip_text" class="text-danger">{{ form.non_field_errors.as_text }}</p>
                     <div class="form-group row">
                         <div class="offset-sm-1 col-sm-2">
-                            <button type="submit" class="btn btn-primary float-right">创建</button>
+                            <button type="submit" class="btn btn-primary float-right">{% translate '创建' %}</button>
                         </div>
                     </div>
                 </form>
