--- a/network/templates/vlan_add.html
+++ b/network/templates/vlan_add.html
@@ -1,29 +1,30 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 {% load  sizeformat %}
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'network/vlan_list.css' %}">
 {% endblock %}
-{% block title %}VLAN信息{% endblock %}
+{% block title %}{% translate 'VLAN信息' %}{% endblock %}
 
 {% block boby %}
     <div class="col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>VLAN信息</strong></span>
+                <span class="card-title"><strong>{% translate 'VLAN信息' %}</strong></span>
             </div>
             <div class="card-body">
                 <table class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
                     <thead class="thead-light">
                     <tr>
-                        <th>名称</th>
-                        <th>子网IP地址</th>
-                        <th>子网掩码</th>
-                        <th>网关</th>
-                        <th>子网IP地址(ipv6)</th>
-                        <th>子网掩码(ipv6)</th>
-                        <th>网关(ipv6)</th>
+                        <th>{% translate '名称' %}</th>
+                        <th>{% translate '子网IP地址' %}</th>
+                        <th>{% translate '子网掩码' %}</th>
+                        <th>{% translate '网关' %}</th>
+                        <th>{% translate '子网IP地址' %}(ipv6)</th>
+                        <th>{% translate '子网掩码' %}(ipv6)</th>
+                        <th>{% translate '网关' %}(ipv6)</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -40,7 +41,7 @@
                 </table>
             </div>
             <div class="card-header">
-                <span class="card-title"><strong>生成子网主机IP地址列表</strong></span>
+                <span class="card-title"><strong>{% translate '生成子网主机IP地址列表' %}</strong></span>
                 <!-- <span><a class="btn btn-xs btn-primary pull-right" href="">
                     <span class="glyphicon glyphicon-plus"></span>全部导入
                 </a></span> -->
@@ -58,18 +59,18 @@
                         </div>
                         <input name="end_ip" class="form-control" type="text" value="" placeholder="输入结束IP地址"/>
                         <div class="input-group-append">
-                            <button id="generate" type="submit" class="btn btn-primary form-control">生成</button>
+                            <button id="generate" type="submit" class="btn btn-primary form-control">{% translate '生成' %}</button>
                         </div>
-                        <button id="import" type="submit" class="btn btn-info"><i class="fa fa-plus"></i>全部导入</button>
+                        <button id="import" type="submit" class="btn btn-info"><i class="fa fa-plus"></i>{% translate '全部导入' %}</button>
                         <input name="vlan_id" hidden value="{{ vlan.id }}"/>
                         <input id="flag" name="write_database" hidden value=""/>
                     </div>
                 </form>
                 <table id="table-add" class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
                     <tr>
-                        <th>主机名称</th>
-                        <th>IP地址</th>
-                        <th>MAC地址</th>
+                        <th>{% translate '主机名称' %}</th>
+                        <th>{% translate 'IP地址' %}</th>
+                        <th>{% translate 'MAC地址' %}</th>
                     </tr>
 {#                    <!-- {% for macip in macips %}#}
 {#                    <tr>#}
