--- a/network/templates/vlan_show.html
+++ b/network/templates/vlan_show.html
@@ -1,35 +1,36 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
 {% load  sizeformat %}
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'network/vlan_list.css' %}">
 {% endblock %}
-{% block title %}IP列表{% endblock %}
+{% block title %}{% translate 'IP列表' %}{% endblock %}
 
 {% block boby %}
     <div class="col-md-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>IP列表</strong></span>
+                <span class="card-title"><strong>{% translate 'IP列表' %}</strong></span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'network:vlan_show' %}?vlan_id={{ vlan_id }}&iptype=ipv4">
-                    <i class="fa fa-download"></i> 导出ipv4配置文件
+                    <i class="fa fa-download"></i> {% translate '导出ipv4配置文件' %}
                 </a></span>
                 <span><a class="btn btn-sm btn-primary float-right" href="{% url 'network:vlan_show' %}?vlan_id={{ vlan_id }}&iptype=ipv6">
-                    <i class="fa fa-download"></i> 导出ipv6配置文件
+                    <i class="fa fa-download"></i> {% translate '导出ipv6配置文件' %}
                 </a></span>
             </div>
             <div class="card-body" style="min-height: 400px;">
                 <table class="table table-vm-list" style="word-wrap:break-word;word-break:break-all;">
                     <thead class="thead-light">
                     <tr>
-                        <th>编号</th>
-                        <th>IP地址</th>
-                        <th>IPv6地址</th>
-                        <th>MAC地址</th>
-                        <th>主机编号</th>
-                        <th>主机编号（附加）</th>
-                        <th>状态</th>
+                        <th>{% translate '编号' %}</th>
+                        <th>IP{% translate '地址' %}</th>
+                        <th>IPv6{% translate '地址' %}</th>
+                        <th>MAC{% translate '地址' %}</th>
+                        <th>{% translate '主机编号' %}</th>
+                        <th>{% translate '主机编号' %}（{% translate '附加' %}）</th>
+                        <th>{% translate '状态' %}</th>
                     </tr>
                     </thead>
                     <tbody>
