--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}关于{% endblock %}
+{% block title %}{% translate '关于' %}{% endblock %}
 
 {% block boby %}
     <div class="d-flex justify-content-center align-items-center h-100 bg-light">
@@ -23,9 +23,9 @@
                         <p>
                             <span class="p-2 bd-highlight" style="color: #0d6efd">{{ version_git_change_set.0.0 }} </span>
 
-                            <span class="p-2 bd-highlight">发布时间：{{ version_git_change_set.0.1 | date:'Y-m-d H:i:s' }}</span>
+                            <span class="p-2 bd-highlight">{% translate '发布时间' %}：{{ version_git_change_set.0.1 | date:'Y-m-d H:i:s' }}</span>
 
-                            <span class="p-2 bd-highlight">发布人：{{ version_git_change_set.0.2 }}</span>
+                            <span class="p-2 bd-highlight">{% translate '发布人' %}：{{ version_git_change_set.0.2 }}</span>
                         </p>
 
                         <pre style="white-space: pre-wrap;word-wrap: break-word; font-size: 1rem">{{ version_git_change_set.0.4 }}</pre>
@@ -36,9 +36,9 @@
                             <p>
                                 <span class="p-2 bd-highlight" style="color: #0d6efd">{{ tag.0 }} </span>
 
-                                <span class="p-2 bd-highlight">发布时间：{{ tag.1 | date:'Y-m-d H:i:s' }}</span>
+                                <span class="p-2 bd-highlight">{% translate '发布时间' %}：{{ tag.1 | date:'Y-m-d H:i:s' }}</span>
 
-                                <span class="p-2 bd-highlight">发布人：{{ tag.2 }}</span>
+                                <span class="p-2 bd-highlight">{% translate '发布人' %}：{{ tag.2 }}</span>
                             </p>
                             <pre style="white-space: pre-wrap;word-wrap: break-word; font-size: 1rem">{{ tag.4 }}</pre>
                             <br>
@@ -47,7 +47,7 @@
 
                     {% else %}
                         <p>
-                            无法获取版本日志， 详情请查看：
+                            {% translate '无法获取版本日志， 详情请查看' %}：
                             <span><a href="{% url 'docs:docs' %}#/changelog" target="view_window">
                                     {% trans '变更日志' %}</a>
                             </span>
