--- a/templates/error.html
+++ b/templates/error.html
@@ -1,23 +1,24 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block boby %}
     <div class="offset-md-2 col-md-8 col-lg-8">
         <table class="table table-hover table-bordered">
             <thead class="thead-light">
                 <tr>
-                    <th colspan="2" class="text-center">操作异常</th>
+                    <th colspan="2" class="text-center">{% translate '操作异常' %}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td style="width: 100px;text-align: center">异常编码</td>
+                    <td style="width: 100px;text-align: center">{% translate '异常编码' %}</td>
                     <td>{{ error_code }}</td>
                 </tr>
                 <tr>
-                    <td style="width: 100px;text-align: center">异常类型</td>
+                    <td style="width: 100px;text-align: center">{% translate '异常类型' %}</td>
                     <td>{{ error_type }}</td>
                 </tr>
                 <tr>
-                    <td  style="vertical-align: middle; text-align: center">提示</td>
+                    <td  style="vertical-align: middle; text-align: center">{% translate '提示' %}</td>
                     <td>
                         {% if error_tips %}
                             <ul class="list-group">
