--- a/vms/templates/vm_attach_ip_list.html
+++ b/vms/templates/vm_attach_ip_list.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% load  sizeformat %}
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'vms/vms_list.css' %}">
 {% endblock %}
-{% block title %}IP地址列表{% endblock %}
+{% block title %}{% translate 'IP地址列表' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid">
@@ -15,35 +16,35 @@
                 <div class="float-right">
 {#                    <a class="btn btn-sm btn-primary"#}
 {#                       href="{% url 'vms:vm-detach-ip' vm_uuid=vm_uuid %}">移除IP</a>#}
-                    <a class="btn btn-sm btn-info" href="{% url 'network:vlan_show' %}?vlan={{ vlan_id }}">IP地址列表</a>
+                    <a class="btn btn-sm btn-info" href="{% url 'network:vlan_show' %}?vlan={{ vlan_id }}">{% translate 'IP地址列表' %}</a>
                 </div>
             </div>
             <div class="card-body">
                 <div class="">
-                    <div class="text-primary h4">虚拟机信息:</div>
+                    <div class="text-primary h4">{% translate '虚拟机信息' %}:</div>
                     <div class="">
                         <dl class="row">
-                            <dt class="col-2 text-right">虚拟机UUID:</dt>
+                            <dt class="col-2 text-right">{% translate '虚拟机UUID' %}:</dt>
                             <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                            <dt class="col-2 text-right">虚拟机IP地址:</dt>
+                            <dt class="col-2 text-right">{% translate '虚拟机IP地址' %}:</dt>
                             <dd class="col-10">{{ vm.ipv4 }}</dd>
-                            <dt class="col-2 text-right">镜像:</dt>
+                            <dt class="col-2 text-right">{% translate '镜像' %}:</dt>
                             <dd class="col-10">{{ vm.image_name }}</dd>
-                            <dt class="col-2 text-right">机组:</dt>
+                            <dt class="col-2 text-right">{% translate '机组' %}:</dt>
                             <dd class="col-10">{{ vm.host.group }}</dd>
-                            <dt class="col-2 text-right">备注:</dt>
+                            <dt class="col-2 text-right">{% translate '备注' %}:</dt>
                             <dd class="col-10">{{ vm.remarks }}</dd>
                         </dl>
                     </div>
                 </div>
                 <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
                 <div>
-                    <div class="text-success h4 col-sm-4">可供附加的IP地址：</div>
+                    <div class="text-success h4 col-sm-4">{% translate '可供附加的IP地址' %}：</div>
                     <div class="float-right col-sm-8">
                         <form role="form" class="form-horizontal" method="get" action="">
                             <div class="input-group" style="">
                                 <div class="input-group-prepend">
-                                    <label class="input-group-text" for="id-center">VLAN网段</label>
+                                    <label class="input-group-text" for="id-center">VLAN{% translate '网段' %}</label>
                                 </div>
                                 <select name="vlan-select" class="custom-select" id="id-center">
                                     <option value="">--</option>
@@ -54,12 +55,12 @@
                                     {% endfor %}
                                 </select>
                                 <div class="input-group-prepend">
-                                    <label class="input-group-text" for="id-center">关键字</label>
+                                    <label class="input-group-text" for="id-center">{% translate '关键字' %}</label>
                                 </div>
                                 <input type="text" class="form-control" name="search" value="{{ search }}"
-                                       placeholder="搜 IP地址"/>
+                                       placeholder="{% translate '搜 IP地址' %}"/>
                                 <span class="input-group-prepend"></span>
-                                <button type="submit" class="btn btn-primary form-control">筛选</button>
+                                <button type="submit" class="btn btn-primary form-control">{% translate '筛选' %}</button>
                             </div>
                         </form>
                     </div>
@@ -67,15 +68,15 @@
                 <table class="table table-bordered table-vm-list"
                        style="word-wrap:break-word;word-break:break-all;">
                     <tr>
-                        <th>编号</th>
-                        <th>IP地址</th>
-                        <th>IPv6地址</th>
-                        <th>MAC地址</th>
-                        <th>网桥名</th>
-                        <th>VLAN描述</th>
-                        <th>标签</th>
-                        <th>备注</th>
-                        <th>操作</th>
+                        <th>{% translate '编号' %}</th>
+                        <th>IP{% translate '地址' %}</th>
+                        <th>IPv6{% translate '地址' %}</th>
+                        <th>MAC{% translate '地址' %}</th>
+                        <th>{% translate '网桥名' %}</th>
+                        <th>VLAN{% translate '描述' %}</th>
+                        <th>{% translate '标签' %}</th>
+                        <th>{% translate '备注' %}</th>
+                        <th>{% translate '操作' %}</th>
                     </tr>
                     {% for ip in mac_ip %}
                         <tr id="tr_">
@@ -90,7 +91,7 @@
 
                             <td>
                                 <button class="btn btn-primary btn-vm-attach-ip" data-attach-ip-id="{{ ip.id }}"
-                                        data-vm-uuid="{{ vm_uuid }}">附加IP地址
+                                        data-vm-uuid="{{ vm_uuid }}">{% translate '附加IP地址' %}
                                 </button>
                             </td>
                         </tr>
