--- a/vms/templates/vm_detach_ip_list.html
+++ b/vms/templates/vm_detach_ip_list.html
@@ -1,38 +1,39 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% load  sizeformat %}
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'vms/vms_list.css' %}">
 {% endblock %}
-{% block title %}虚拟机使用的IP地址列表{% endblock %}
+{% block title %}{% translate '虚拟机使用的IP地址列表' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong><a class="btn btn-primary" href="">移除IP地址列表</a></strong></span>
+                <span class="card-title"><strong><a class="btn btn-primary" href="">{% translate '移除IP地址列表' %}</a></strong></span>
             </div>
             <div class="">
-                <div class="text-primary h4">虚拟机信息:</div>
+                <div class="text-primary h4">{% translate '虚拟机信息' %}:</div>
                 <div class="">
                     <dl class="row">
-                        <dt class="col-2 text-right">虚拟机UUID:</dt>
+                        <dt class="col-2 text-right">{% translate '虚拟机UUID' %}:</dt>
                         <dd class="col-10" id="id-mount-vm-uuid">{{ vm.hex_uuid }}</dd>
-                        <dt class="col-2 text-right">虚拟机IP地址:</dt>
+                        <dt class="col-2 text-right">{% translate '虚拟机IP地址' %}:</dt>
                         <dd class="col-10">{{ vm.ipv4 }}</dd>
-                        <dt class="col-2 text-right">镜像:</dt>
+                        <dt class="col-2 text-right">{% translate '镜像' %}:</dt>
                         <dd class="col-10">{{ vm.image_name }}</dd>
-                        <dt class="col-2 text-right">机组:</dt>
+                        <dt class="col-2 text-right">{% translate '机组' %}:</dt>
                         <dd class="col-10">{{ vm.host.group }}</dd>
-                        <dt class="col-2 text-right">备注:</dt>
+                        <dt class="col-2 text-right">{% translate '备注' %}:</dt>
                         <dd class="col-10">{{ vm.remarks }}</dd>
                     </dl>
                 </div>
             </div>
             <hr style=" height:1px;border:1px;border-top:1px solid #185598;"/>
             <div>
-                <div class="text-success h4 col-sm-4">可供移除的IP地址：</div>
+                <div class="text-success h4 col-sm-4">{% translate '可供移除的IP地址' %}：</div>
 {#                <div class="float-right col-sm-8">#}
 {#                    <form role="form" class="form-horizontal" method="get" action="">#}
 {#                        <div class="input-group" style="">#}
@@ -50,15 +51,15 @@
             <table class="table table-bordered table-vm-list"
                    style="word-wrap:break-word;word-break:break-all;">
                 <tr>
-                    <th>编号</th>
-                    <th>IP地址</th>
-                    <th>MAC地址</th>
-                    <th>网桥名</th>
-                    <th>VLAN描述</th>
-                    <th>标签</th>
-                    <th>备注</th>
-                     <th>主机</th>
-                    <th>操作</th>
+                    <th>{% translate '编号' %}</th>
+                    <th>{% translate 'IP地址' %}</th>
+                    <th>{% translate 'MAC地址' %}</th>
+                    <th>{% translate '网桥名' %}</th>
+                    <th>{% translate 'VLAN描述' %}</th>
+                    <th>{% translate '标签' %}</th>
+                    <th>{% translate '备注' %}</th>
+                     <th>{% translate '主机' %}</th>
+                    <th>{% translate '操作' %}</th>
                 </tr>
                 {% for ip in mac_ip %}
                     <tr id="tr_">
@@ -73,7 +74,7 @@
 
                         <td>
                             <button class="btn btn-primary btn-vm-detach-ip" data-detach-ip-id="{{ ip.sub_ip.id }}"
-                                    data-vm-uuid="{{ vm_uuid }}">移除IP地址
+                                    data-vm-uuid="{{ vm_uuid }}">{% translate '移除IP地址' %}
                             </button>
                         </td>
                     </tr>
