--- a/vms/templates/vm_reset.html
+++ b/vms/templates/vm_reset.html
@@ -1,36 +1,37 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 {% load  sizeformat %}
 
-{% block title %}重置系统镜像{% endblock %}
+{% block title %}{% translate '重置系统镜像' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid col-12">
         <div class="card">
             <div class="card-header">
-                <span class="card-title"><strong>重置虚拟机系统镜像</strong></span>
+                <span class="card-title"><strong>{% translate '重置虚拟机系统镜像' %}</strong></span>
                 <div class="float-right">
-                    <a class="btn btn-sm btn-success" href="{% url 'vms:vm-create' %}">创建虚拟机</a>
-                    <a class="btn btn-sm btn-info" href="{% url 'vms:vms-list' %}">虚拟机列表</a>
+                    <a class="btn btn-sm btn-success" href="{% url 'vms:vm-create' %}">{% translate '创建虚拟机' %}</a>
+                    <a class="btn btn-sm btn-info" href="{% url 'vms:vms-list' %}">{% translate '虚拟机列表' %}</a>
                 </div>
             </div>
             <div class="card-body">
                 <div class="">
-                    <div class="text-primary h4">虚拟机信息:</div>
+                    <div class="text-primary h4">{% translate '虚拟机信息' %}:</div>
                     <div class="">
                         <dl class="row">
-                            <dt class="col-2 text-right">虚拟机UUID:</dt> <dd class="col-10" id="id-vm-uuid">{{ vm.hex_uuid }}</dd>
-                            <dt class="col-2 text-right">虚拟机IP:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
-                            <dt class="col-2 text-right">CPU数:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
-                            <dt class="col-2 text-right">内存:</dt> <dd class="col-10">{{ vm.mem }} GB</dd>
-                            <dt class="col-2 text-right">镜像:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
-                            <dt class="col-2 text-right">机组:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
-                            <dt class="col-2 text-right">宿主机:</dt> <dd class="col-10">{{ vm.host.ipv4 }}</dd>
-                            <dt class="col-2 text-right">备注:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
+                            <dt class="col-2 text-right">{% translate '虚拟机UUID' %}:</dt> <dd class="col-10" id="id-vm-uuid">{{ vm.hex_uuid }}</dd>
+                            <dt class="col-2 text-right">{% translate '虚拟机IP' %}:</dt> <dd class="col-10">{{ vm.ipv4 }}</dd>
+                            <dt class="col-2 text-right">{% translate 'CPU数' %}:</dt> <dd class="col-10">{{ vm.vcpu }}</dd>
+                            <dt class="col-2 text-right">{% translate '内存' %}:</dt> <dd class="col-10">{{ vm.mem }} GB</dd>
+                            <dt class="col-2 text-right">{% translate '镜像' %}:</dt> <dd class="col-10">{{ vm.image_name }}</dd>
+                            <dt class="col-2 text-right">{% translate '机组' %}:</dt> <dd class="col-10">{{ vm.host.group }}</dd>
+                            <dt class="col-2 text-right">{% translate '宿主机' %}:</dt> <dd class="col-10">{{ vm.host.ipv4 }}</dd>
+                            <dt class="col-2 text-right">{% translate '备注' %}:</dt> <dd class="col-10">{{ vm.remarks }}</dd>
                         </dl>
                         <form id="id-form-vm-reset">
                             <div class="form-group row">
-                                <label for="id-image" class="offset-sm-1 col-sm-2 col-form-label">选择系统镜像</label>
+                                <label for="id-image" class="offset-sm-1 col-sm-2 col-form-label">{% translate '选择系统镜像' %}</label>
                                 <div class="col-sm-7">
                                     <select name="image_id" class="form-control" id="id-image">
                                         <option value="">--</option>
@@ -41,7 +42,7 @@
                                 </div>
                             </div>
                             <div class="offset-1">
-                                <button class="btn btn-primary" id="btn-vm-reset">重置</button>
+                                <button class="btn btn-primary" id="btn-vm-reset">{% translate '重置' %}</button>
                             </div>
                         </form>
                     </div>
