--- a/vpn/templates/delete.html
+++ b/vpn/templates/delete.html
@@ -1,24 +1,25 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load static %}
 
 {% block head %}
 {% endblock %}
-{% block title %}VPN删除{% endblock %}
+{% block title %}{% translate 'VPN删除' %}{% endblock %}
 
 {% block boby %}
     <div class="container-fluid">
         {% if vpn %}
             <div class="from-group">
-                <div class="font-weight-bold m-2">确定想要删除VPN吗？</div>
-                <div class="m-2">用户名: {{ vpn.username }}</div>
+                <div class="font-weight-bold m-2">{% translate '确定想要删除VPN吗' %}？</div>
+                <div class="m-2">{% translate '用户名' %}: {{ vpn.username }}</div>
             </div>
             <form method="post" class="form-group m-2">
                 {% csrf_token %}
-                <button type="submit" class="btn btm-sm btn-primary btn-danger">确定删除</button>
-                <span class="btn btm-sm btn-primary btn-success" onclick="window.history.back()">取消返回</span>
+                <button type="submit" class="btn btm-sm btn-primary btn-danger">{% translate '确定删除' %}</button>
+                <span class="btn btm-sm btn-primary btn-success" onclick="window.history.back()">{% translate '取消返回' %}</span>
             </form>
         {% else %}
-            <div>VPN不存在</div>
+            <div>VPN{% translate '不存在' %}</div>
         {% endif %}
     </div>
 {% endblock %}
